<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="age">Age</string>
    <string name="app_name">Foodly</string>
    <string name="back">Back</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="diet_balanced">Balanced</string>
    <string name="diet_high_fiber">High fiber</string>
    <string name="diet_low_fat">Low fat</string>
    <string name="diet_type">Diet type</string>
    <string name="fat">Fat</string>
    <string name="fat_free">Fat free</string>
    <string name="female">Female</string>
    <string name="goal_summary">Goal summary</string>
    <string name="gluten_free">Gluten free</string>
    <string name="height">Height</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="macro_advanced">Choose individual nutrient proportions</string>
    <string name="male">Male</string>
    <string name="next">Next</string>
    <string name="peanut_free">Peanut free</string>
    <string name="protein">Protein</string>
    <string name="ready_message">Based on your selections, we found some recipes you might like. Choose your favorites from the list on the next screen.</string>
    <string name="ready_subtitle">That\'s all the information we need.</string>
    <string name="ready_title">Let\'s go!</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_photo">Recipe photo</string>
    <string name="recommend_recipe">I\'m feeling lucky</string>
    <string name="settings">Settings</string>
    <string name="sex">Sex</string>
    <string name="this_week">This week</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="weight">Weight</string>
    <string name="welcome">Hungry?</string>
    <string name="welcome_message">We\'ll need some information about you to provide the best suggestions.</string>
    <string name="welcome_subtitle">Our goal is to help you make the most of your meals.</string>
    <string name="welcome_title">Welcome to Foodly!</string>
    <string name="your_body">Your body</string>
    <string name="your_diet">Your diet</string>
</resources>
