<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/goal_summary_label"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_message"
            android:text="@string/goal_summary" />

        <GridLayout
            android:id="@+id/goal_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goal_summary_label">

            <TextView
                android:id="@+id/goal_summary_calories_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/calories" />

            <TextView
                android:id="@+id/goal_summary_carbs_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/carbs" />

            <TextView
                android:id="@+id/goal_summary_fat_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/fat" />

            <TextView
                android:id="@+id/goal_summary_protein_label"
                style="?android:attr/textAppearanceMedium"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/protein" />

        </GridLayout>

        <TextView
            android:id="@+id/this_week_label"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/goal_summary"
            android:text="@string/this_week" />

        <ListView
            android:id="@+id/this_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/this_week_label" />

    </RelativeLayout>
</layout>
