<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="me.tigerapps.foodly.data.User" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/height_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/height_value"
                android:text="@string/height"
                app:layout_constraintEnd_toStartOf="@+id/weight_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <NumberPicker
                android:id="@+id/height_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:value="@={user.height}"
                app:layout_constraintEnd_toEndOf="@+id/height_label"
                app:layout_constraintStart_toStartOf="@+id/height_label"
                app:layout_constraintTop_toBottomOf="@+id/height_label"
                app:maxValue="@{250}"
                app:minValue="@{0}" />

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/weight_value"
                android:text="@string/weight"
                app:layout_constraintEnd_toStartOf="@+id/age_label"
                app:layout_constraintStart_toEndOf="@+id/height_label"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <NumberPicker
                android:id="@+id/weight_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:value="@={user.weight}"
                app:layout_constraintBottom_toBottomOf="@+id/height_value"
                app:layout_constraintEnd_toEndOf="@+id/weight_label"
                app:layout_constraintStart_toStartOf="@+id/weight_label"
                app:layout_constraintTop_toBottomOf="@+id/weight_label"
                app:maxValue="@{250}"
                app:minValue="@{0}" />

            <TextView
                android:id="@+id/age_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:labelFor="@+id/age_value"
                android:text="@string/age"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weight_label"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <NumberPicker
                android:id="@+id/age_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:value="@={user.age}"
                app:layout_constraintBottom_toBottomOf="@+id/height_value"
                app:layout_constraintEnd_toEndOf="@+id/age_label"
                app:layout_constraintStart_toStartOf="@+id/age_label"
                app:layout_constraintTop_toBottomOf="@+id/age_label"
                app:maxValue="@{150}"
                app:minValue="@{0}" />

            <TextView
                android:id="@+id/sex_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/height_value" />

            <RadioButton
                android:id="@+id/sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sex_label" />

            <RadioButton
                android:id="@+id/sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sex_female"
                app:layout_constraintTop_toBottomOf="@+id/sex_label" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</layout>