<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="TextView"
        tools:text="@string/dietOption" />

    <SeekBar
        android:id="@+id/seekbarCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="137dp"
        android:layout_toStartOf="@+id/textView7"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seekbarProtein"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekbarCarbs"
        android:layout_marginTop="23dp"
        android:layout_toStartOf="@+id/textView9"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seekbarFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/seekbarProtein"
        android:layout_marginTop="23dp"
        android:layout_toStartOf="@+id/textView10"
        android:layout_weight="1" />

    <SeekBar
        android:id="@+id/seekbarCarbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="22dp"
        android:layout_toStartOf="@+id/textView8"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/seekbarCalories"
        android:text="TextView"
        tools:text="@string/calories" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView7"
        android:layout_alignTop="@+id/seekbarCarbs"
        android:text="TextView"
        tools:text="@string/protein" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView8"
        android:layout_alignTop="@+id/seekbarProtein"
        android:text="TextView"
        tools:text="@string/fat" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView9"
        android:layout_alignTop="@+id/seekbarFat"
        android:text="TextView"
        tools:text="@string/carbs" />

</RelativeLayout>
